--- a/common/packages.tex
+++ b/common/packages.tex
@@ -98,6 +98,7 @@
 \usepackage{totcount}                               % Пакет создания счётчиков на основе последнего номера подсчитываемого элемента (может требовать дважды компилировать документ)
 \usepackage{totpages}                               % Счётчик страниц, совместимый с hyperref (ссылается на номер последней страницы). Желательно ставить последним пакетом в преамбуле
 
+\usepackage[]{algorithm2e}
 %%% Продвинутое управление групповыми ссылками (пока только формулами) %%%
 \ifxetexorluatex
     \usepackage{cleveref}                           % cleveref корректно считывает язык из настроек polyglossia
