A bit of new references

--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,114 @@
+@inproceedings{Kusano:2016:FCT,
+ author = {Kusano, Markus and Wang, Chao},
+ title = {Flow-sensitive Composition of Thread-modular Abstract Interpretation},
+ booktitle = {Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+ series = {FSE 2016},
+ year = {2016},
+ isbn = {978-1-4503-4218-6},
+ location = {Seattle, WA, USA},
+ pages = {799--809},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2950290.2950291},
+ doi = {10.1145/2950290.2950291},
+ acmid = {2950291},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Abstract interpretation, Concurrency, Datalog, Interference, Invariant generation, Threadmodular reasoning}
+}
+
+@inproceedings{Le:2015:TRC,
+ author = {Le, Duy-Khanh and Chin, Wei-Ngan and Teo, Yong Meng},
+ title = {Threads As Resource for Concurrency Verification},
+ booktitle = {Proceedings of the 2015 Workshop on Partial Evaluation and Program Manipulation},
+ series = {PEPM '15},
+ year = {2015},
+ isbn = {978-1-4503-3297-2},
+ location = {Mumbai, India},
+ pages = {73--84},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2678015.2682540},
+ doi = {10.1145/2678015.2682540},
+ acmid = {2682540},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {concurrency verification, first-class threads, separation logic, threads as resource}
+}
+
+@inproceedings{Di:2016:ADD,
+ author = {Di, Peng and Sui, Yulei},
+ title = {Accelerating Dynamic Data Race Detection Using Static Thread Interference Analysis},
+ booktitle = {Proceedings of the 7th International Workshop on Programming Models and Applications for Multicores and Manycores},
+ series = {PMAM'16},
+ year = {2016},
+ isbn = {978-1-4503-4196-7},
+ location = {Barcelona, Spain},
+ pages = {30--39},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2883404.2883405},
+ doi = {10.1145/2883404.2883405},
+ acmid = {2883405},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {concurrent program, data race, multithreaded, static analysis}
+}
+
+@inproceedings{Smith:2011:LGS,
+ author = {Smith, Adam R. and Kulkarni, Prasad A.},
+ title = {Localizing Globals and Statics to Make C Programs Thread-safe},
+ booktitle = {Proceedings of the 14th International Conference on Compilers, Architectures and Synthesis for Embedded Systems},
+ series = {CASES '11},
+ year = {2011},
+ isbn = {978-1-4503-0713-0},
+ location = {Taipei, Taiwan},
+ pages = {205--214},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2038698.2038730},
+ doi = {10.1145/2038698.2038730},
+ acmid = {2038730},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {globals, thread-safe}
+} 
+
+@article{Radoi:2015:ETS,
+ author = {Radoi, Cosmin and Dig, Danny},
+ title = {Effective Techniques for Static Race Detection in Java Parallel Loops},
+ journal = {ACM Trans. Softw. Eng. Methodol.},
+ issue_date = {August 2015},
+ volume = {24},
+ number = {4},
+ month = sep,
+ year = {2015},
+ issn = {1049-331X},
+ pages = {24:1--24:30},
+ articleno = {24},
+ numpages = {30},
+ url = {http://doi.acm.org/10.1145/2729975},
+ doi = {10.1145/2729975},
+ acmid = {2729975},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Java, Static race detection, static analysis, synchronization}
+}
+
+@inproceedings{Yoga:2016:PDR,
+ author = {Yoga, Adarsh and Nagarakatte, Santosh and Gupta, Aarti},
+ title = {Parallel Data Race Detection for Task Parallel Programs with Locks},
+ booktitle = {Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+ series = {FSE 2016},
+ year = {2016},
+ isbn = {978-1-4503-4218-6},
+ location = {Seattle, WA, USA},
+ pages = {833--845},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/2950290.2950329},
+ doi = {10.1145/2950290.2950329},
+ acmid = {2950329},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Data Races, Fork Join Programs, Intel TBB}
+} 
+
 @InProceedings{Kahlon:2009:SRTI,
 author="Kahlon, Vineet
 and Sankaranarayanan, Sriram
